create custom send input icon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -928,3 +928,8 @@ table thead tr:hover {
 .input-modal-card-sections {
   scrollbar-width: none;
 }
+
+
+.gradientButton {
+  background-image: linear-gradient(to right, rgba(0, 240, 255, 0.71), #0B3BEC);
+}
