experimental svh--helper for safari--

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -939,7 +939,7 @@ table thead tr:hover {
   background-image: linear-gradient(to right, rgba(0, 240, 255, 0.71), #0B3BEC);
 }
 
-.CrossbrowserLayout {
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
+.svhExperimentalClass{
+  min-height: 100svh;
+  /* min-height: 100vh; */
 }
