--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -939,7 +939,7 @@ table thead tr:hover {
   background-image: linear-gradient(to right, rgba(0, 240, 255, 0.71), #0B3BEC);
 }
 
-.svhExperimentalClass{
+/* .svhExperimentalClass{
   min-height: 100dvh;
-  /* min-height: 100vh; */
-}
+  min-height: 100vh;
+} */
